--- a/config.yaml
+++ b/config.yaml
@@ -9,6 +9,12 @@ etl:
   sample: "sample1.csv"
   min_price: 10  # dollars
   max_price: 350  # dollars
+cleaning:
+  output_artifact: clean_sample.csv
+  output_type: cleaned_data
+  output_description: Cleaned data with price outliers removed
+  min_price: 10
+  max_price: 350
 data_check:
   kl_threshold: 0.2
 modeling:
